--- a/src/Screens/Skills/skills.css
+++ b/src/Screens/Skills/skills.css
@@ -43,7 +43,7 @@
     font-size: 23px;
     font-weight: 600;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(15, 14, 14);
+    background-color: rgb(19, 18, 18);
     display: flex;
     justify-content: center;
     align-items: center;
